<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl_WorkoutPlans_Leg_Day_Workout_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Workout_Plans.WorkoutPlans_Leg_Day_Workout_1">

    <!--tools:openDrawer="start"-->

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_WorkoutPlans"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/main_light"
        android:outlineProvider="bounds">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/tb_WorkoutPlans_Leg_Day_1"
                layout="@layout/toolbar_preset_backbutton" />

            <LinearLayout
                android:id="@+id/Youtube_View_Starter_2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_border"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tb_WorkoutPlans_Leg_Day_1"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="SpeakableTextPresentCheck">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_WorkoutPlansStarter2_video"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:autoPlay="false"
                        app:showYouTubeButton="true"
                        app:videoId="KpCPgNer_Oo" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Youtube_View_2_Description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_border"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="15dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Youtube_View_Starter_2"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

                <TextView
                    android:id="@+id/flow_part_2_1"
                    android:layout_width="395dp"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:text="@string/flow_of_leg_day_workout_challenge_part_1"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Youtube_View_2_Description_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_border"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="15dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Youtube_View_2_Description"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

                <TextView
                    android:id="@+id/flow_part_2_2"
                    android:layout_width="395dp"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:text="@string/flow_of_leg_day_workout_challenge_part_2"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Youtube_View_2_Description_3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_border"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="15dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Youtube_View_2_Description_2"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

                <TextView
                    android:id="@+id/flow_part_2_3"
                    android:layout_width="395dp"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:text="@string/flow_of_leg_day_workout_challenge_part_3"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Youtube_View_2_Description_4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_border"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="15dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Youtube_View_2_Description_3"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

                <TextView
                    android:id="@+id/flow_part_2_4"
                    android:layout_width="395dp"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:text="@string/flow_of_leg_day_workout_challenge_part_4"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Youtube_View_2_Description_5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_border"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="15dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Youtube_View_2_Description_4"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

                <TextView
                    android:id="@+id/flow_part_2_5"
                    android:layout_width="395dp"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:text="@string/flow_of_leg_day_workout_challenge_part_5"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Youtube_View_2_Description_6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_border"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="15dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Youtube_View_2_Description_5"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

                <TextView
                    android:id="@+id/flow_part_2_6"
                    android:layout_width="395dp"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:text="@string/flow_of_leg_day_workout_challenge_part_6"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Youtube_View_2_Description_7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_border"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="15dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Youtube_View_2_Description_6"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

                <TextView
                    android:id="@+id/flow_part_2_7"
                    android:layout_width="395dp"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:text="@string/flow_of_leg_day_workout_challenge_part_7"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>
